General Infrmation Update

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -9,3 +9,5 @@
 <p>You can add, edit, and delete items from the inventory list. Those changes are highlighted and not saved until you press the update button.</p>
 
 <p>The shopping cart calculates the order total and grants bulk discounts. Also it calculates the freight for quantities larger than 20 items.</p>
+<h3>Technology Stack</h3>
+<p>.net core Blazor WebAssembly Version 7.14</p>
